--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -138,13 +138,13 @@ Assume that there are $N_1$ parents in population 1 at the beginning of the firs
 
 To estimate the migration number or rate, we utilize the number of HS and/or PO pairs observed in a sample. In both populations, $n_{\rm O, 1}$ and $n_{\rm O, 2}$ offspring are sampled randomly in the first and second year, respectively, which are identified as young-of-year individuals without error. In addtion, $n_{\rm P, 1}$ and $n_{\rm P, 2}$ parents are sampled randomly immediately after the end of the reproductive season in the first and second years, respectively. For mathematical tractability, the parents must survive the reproductive season; therefore, both the mother and father of a give offspring have the potential to be sampled in the same year. Note that all the four sample types, i.e., $n_{\rm P, 1}$, $n_{\rm P, 2}$, $n_{\rm O, 1}$, and $n_{\rm O, 2}$, are not always required to estimate the migration number or rate. The types of required samples depends on the given situation, which is explained later. Up to subsection 2.6, we focus on only the HS and PO pairs found between populations 1 and 2. To apply the proposed method to the fishery assessment, we assume an invasive sampling procedure, which prevents us from finding a PO pair such that a parent and offspring is sampled in population 1 and 2, respectively. {\bf Figure~\ref{cartoon}b} shows the timeline of the sampling scheme for these hypothetical populations. 
 
-In the example shown in {\bf Fig.~\ref{cartoon}a}, five offspring and four parents are sampled in population 1, four offspring and six parents are sampled in population 2, and two HS pairs and a single PO pair are observed between the two populations 1 and 2. In addition, there are several PO pairs observed within the same population, which are available to estimate parent numbers, which is explained in subsection 2.7. In our modeling framework, if a full-sibling relationship is found, we count it as two HS pairs. The numbers of HS and PO pairs found between the two populations are determined via pairwise comparison of all the sample individuals, i.e., comparisons of $n_{\rm O,1}\times n_{\rm O,2}$ and $n_{\rm O,1}\times n_{\rm P,2}$, respectively. 
+In the example shown in {\bf Figure~\ref{cartoon}a}, five offspring and four parents are sampled in population 1, four offspring and six parents are sampled in population 2, and two HS pairs and a single PO pair are observed between the two populations 1 and 2. In addition, there are several PO pairs observed within the same population, which are available to estimate parent numbers, which is explained in subsection 2.7. In our modeling framework, if a full-sibling relationship is found, we count it as two HS pairs. The numbers of HS and PO pairs found between the two populations are determined via pairwise comparison of all the sample individuals, i.e., comparisons of $n_{\rm O,1}\times n_{\rm O,2}$ and $n_{\rm O,1}\times n_{\rm P,2}$, respectively. 
 
 \subsection{HS pair-based model}
 
-Here, we consider the probability that two offspring sampled in populations 1 and 2 will share an HS relationship with an arbitrary mother or father, denoted by $\pi_{\rm HS, bet}$. Note that we assume equal reproductive potential among parents (up to subsection 2.7) although this assumption can be relaxed for most of the case (see {\bf Appendix 2} for additional information). Here, $\pi_{\rm HS, bet}$ can be partitioned into three probabilities, i.e., (i) the probability that sampled offspring in population 1 born to a parent that safely arrives in population 2 (hereafter, referred to as a "migrant"); (ii) the probability that sampled offspring in population 2 are born to a migrant; and (iii) the probability that the migrant of a sampled offspring in population 1 and the migrant of a sampled offspring in population 2 are identical. 
+Here, we consider the probability that two offspring sampled in populations 1 and 2 will share a HS relationship with an arbitrary mother or father, denoted by $\pi_{\rm HS, bet}$. Note that we assume equal reproductive potential among parents (up to subsection 2.7) although this assumption can be relaxed for most of the case (see {\bf Appendix 2} for additional information). Here, $\pi_{\rm HS, bet}$ can be partitioned into three probabilities, i.e., (i) the probability that sampled offspring in population 1 born to a parent that safely arrives in population 2 (hereafter, referred to as a "migrant"); (ii) the probability that sampled offspring in population 2 are born to a migrant; and (iii) the probability that the migrant of a sampled offspring in population 1 and the migrant of a sampled offspring in population 2 are identical. 
 
-To assess these probabilities, recall that there must be two parents of arbitral offspring. The first probability is the sum of the father--offspring and mother--offspring relationship, which can be expressed as $r_{\rm M}M/(r_{\rm S,1}N_{1}) + (1 - r_{\rm M})M/((1-r_{\rm S,1})N_{1})$, where $r_{\rm M}$ and $r_{\rm S,1}$ indicate the sex ratio of the parents in the migrants and in all of the population 1, respectively. Under the assumption that $r_{\rm M} = r_{\rm S,1}$, the probability is simplified to $2M/N_{1}$. Similarly, the second probability is simplified to $2M/N_{2}$, which implies the assumption regarding an equal sex ratio in migrants and others. The third probability corresponds to the probability that two randomly selected migrants are identical, i.e., $1/M$. Taken together, we obtain the following: 
+To assess these probabilities, recall that there must be two parents of arbitrary offspring. The first probability is the sum of the father--offspring and mother--offspring relationship, which can be expressed as $r_{\rm M}M/(r_{\rm S,1}N_{1}) + (1 - r_{\rm M})M/((1-r_{\rm S,1})N_{1})$, where $r_{\rm M}$ and $r_{\rm S,1}$ indicate the sex ratio of the parents in the migrants and in all of the population 1, respectively. Under the assumption that $r_{\rm M} = r_{\rm S,1}$, the probability is simplified to $2M/N_{1}$. Similarly, the second probability is simplified to $2M/N_{2}$, which implies the assumption regarding an equal sex ratio in migrants and others. The third probability corresponds to the probability that two randomly selected migrants are identical, i.e., $1/M$. Taken together, we obtain the following: 
 \begin{align}
 \pi_{\rm HS,bet} &= \frac{2M}{N_{1}} \frac{2M}{N_{2}} \frac{1}{M} \nonumber\\
 &= \frac{4M}{N_{1}N_{2}}.
@@ -152,7 +152,7 @@ To assess these probabilities, recall that there must be two parents of arbitral
 \end{align}
 This form holds under a flexible setting for the reproductive potential, e.g., a situation with random variable of $\lambda_{i,1}$ and $\lambda_{j,2}$ ({\bf Appendix 2}). If all $N_1$ parents safely move to population 2 (i.e., $M = N_1$), $\pi_{\rm HS,bet}$ equals $4/N_2$. In addition, if population 2 comprises only migrants (i.e., $M = N_2$), $\pi_{\rm HS,bet}$ equals $4/N_1$. In extreme cases, these probabilities take similar forms as the HS probability, which is sampled randomly from two different cohorts within a population \cite[]{bravington2016close}. 
 
-Let $H_{\rm HS,bet}$ be the number of HS pairs found in the offspring samples of size $n_{\rm O, 1}$ and $n_{\rm O, 2}$. Assuming the total number of HS pairs in the population is much greater than $H_{\rm HS,bet}$, the distribution is approximated by a binomial form (i.e., $H_{\rm HS,bet} \sim {\rm Binom}[\pi_{\rm HS,bet}, n_{\rm O, 1} n_{\rm O, 2}]$). Thus, the theoretical expectation of $H_{\rm HS,bet}$ is given as follows: 
+Let $H_{\rm HS,bet}$ be the number of HS pairs found in the offspring samples of size $n_{\rm O, 1}$ and $n_{\rm O, 2}$. Assuming the total number of HS pairs between the two populations much greater than $H_{\rm HS,bet}$, the distribution is approximated by a binomial form (i.e., $H_{\rm HS,bet} \sim {\rm Binom}[\pi_{\rm HS,bet}, n_{\rm O, 1} n_{\rm O, 2}]$). Thus, the theoretical expectation of $H_{\rm HS,bet}$ is given as follows: 
 \begin{align}
 \mathbb{E}[H_{\rm HS, bet}] &= \pi_{\rm HS,bet} n_{\rm O, 1} n_{\rm O, 2} \nonumber\\
 &= \frac{ 4 n_{\rm O, 1} n_{\rm O, 2} M } { N_{1} N_{2} } \label{HS-2-1}\\
@@ -165,7 +165,7 @@ where $m$ is the migration rate satisfying $M = mN_{1}$. The observed number of 
 \widehat{M_1} &= \frac{N_{1} N_{2} \widetilde{H}_{\rm HS, bet} } {4 n_{\rm O, 1} n_{\rm O, 2} }.
 \label{HS-3}
 \end{align}
-In this paper, a ``tilde'' and ``hat'' symbols indicates the observation and estimator of a variable, respectively. Similarly, $\mathbb{E}[H_{\rm HS, bet}]$ in Equation \ref{HS-2-2} is replaced by $\widetilde{H}_{\rm HS, bet}$, which generates the linear estimator of $m$:
+In this paper, a ``tilde'' and ``hat'' symbols indicate the observation and estimator of a variable, respectively. Similarly, $\mathbb{E}[H_{\rm HS, bet}]$ in Equation \ref{HS-2-2} is replaced by $\widetilde{H}_{\rm HS, bet}$, which generates the linear estimator of $m$:
 
 \begin{align}
 \widehat{m_1} &= \frac{N_{2} \widetilde{H}_{\rm HS, bet} } {4 n_{\rm O, 1} n_{\rm O, 2} }
@@ -189,7 +189,7 @@ In the folowing, we consider the probability that offspring sampled in populatio
 \end{align}
 This form also holds under a flexible setting for the reproductive potential, as noted in the {\bf Appendix 2}. Here, if all $N_1$ parents safely move to population 2 (i.e., $M = N_1$), $\pi_{\rm PO,bet}$ equals $2/N_2$. In addition, if population 2 comprises only migrants (i.e., $M = N_2$), $\pi_{\rm PO,bet}$ equals $2/N_1$. In extreme cases, these probabilities take similar forms to the PO probability that is sampled randomly within a population \cite[]{bravington2016close}. 
 
-Let $H_{\rm PO,bet}$ be the number of PO pairs found in offspring samples of size $n_{\rm O, 1}$ and parent samples of size $n_{\rm P, 2}$. Under the assumption that the total number of PO pairs in the two populations is much greater than $H_{\rm PO,bet}$, the distribution is approximated by a binomial form (i.e., $H_{\rm PO,bet} \sim {\rm Binom}[\pi_{\rm PO,bet}, n_{\rm O, 1} n_{\rm P, 2}]$). Thus, the theoretical expectation of $H_{\rm PO,bet}$ is expressed as follows: 
+Let $H_{\rm PO,bet}$ be the number of PO pairs found in offspring samples of size $n_{\rm O, 1}$ and parent samples of size $n_{\rm P, 2}$. Under the assumption that the total number of PO pairs between the two populations is much greater than $H_{\rm PO,bet}$, the distribution is approximated by a binomial form (i.e., $H_{\rm PO,bet} \sim {\rm Binom}[\pi_{\rm PO,bet}, n_{\rm O, 1} n_{\rm P, 2}]$). Thus, the theoretical expectation of $H_{\rm PO,bet}$ is expressed as follows: 
 \begin{align}
 \mathbb{E}[H_{\rm PO, bet}] &= \pi_{\rm PO,bet} n_{\rm O, 1} n_{\rm P, 2} \nonumber\\
 &= \frac{ 2 n_{\rm O, 1} n_{\rm P, 2} M } { N_{1} N_{2} } \label{PO-2-1} \\
@@ -209,7 +209,7 @@ and
 
 \subsection{Required sample size}
 
-The proposed estimators are based on the observed number of kinship pairs. Their expected number is linearly determined by the number of pairwise comparison (Eqs.~\ref{HS-2-1}-\ref{HS-2-2} and \ref{PO-2-1}-\ref{PO-2-2}), which provides sample size guidance to ensure the condition that at least one or more kinship pairs can be found. The conditions are given as follows: 
+The proposed estimators are based on the observed number of kinship pairs. Their expected number is linearly determined by the number of pairwise comparison (Equations~\ref{HS-2-1}-\ref{HS-2-2} and \ref{PO-2-1}-\ref{PO-2-2}), which provides sample size guidance to ensure the condition that at least one or more kinship pairs can be found. The conditions are given as follows: 
 \begin{align}
 n_{\rm O, 1} n_{\rm O, 2} &> \frac{ N_{2} } { 4m },
 \label{RS-1}
